tests/src/frontend/visibility/invalid/private1.sk
fun main(): void {
  void
}
class X() {
  private fun foo(): void {
    void
  }
}

fun test(): void {
  x = X();
  x.foo()
}
